# college_planner

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml
.codex/environments/: environment.toml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  security-remediation-agent.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_bal_and_occ_overrides.py  0002_balance_and_occurrence_overrides.py  0003_inv_income.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  children.py  deps.py  forecast.py  registry.py  schedules.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: schema.py  session.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: __init__.py  domain.py
backend/app/services/: auth.py  dates.py  email.py  forecast.py  recurrence.py  registry.py
backend/tests/: conftest.py  test_api.py  test_recurrence.py  test_registry.py
docs/: High-Level-Design.md  Implementation-Plan.md  Requirements.md
docs/adr/: 0001-application-architecture.md  0002-ledger-generation-model.md  0003-forecasting-and-search-integration.md  0004-auth-observability-and-deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.test.tsx  main.tsx  styles.css
scripts/: security_remediation_agent.py
