[project]
name = "college-planner-backend"
version = "0.1.0"
description = "Backend API for College Planner"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.21.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.7.0",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
